--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  :root {
+    --font-color: #444;
+    scrollbar-gutter: stable;
+    overflow-y: overlay;
+  }
+}
