--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,80 @@
 @layer components {
   :root {
     --font-color: #444;
-    scrollbar-gutter: stable;
+    scrollbar-gutter: stable both-edges;
     overflow-y: overlay;
+  }
+
+  body {
+    color: var(--font-color);
+    scroll-behavior: smooth;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    background-color: var(--background-color);
+  }
+
+  body::before {
+    @apply fixed left-0 top-0 h-screen w-screen bg-cover bg-center bg-no-repeat;
+    content: '';
+    z-index: -1;
+    opacity: 0.1;
+    background-image: var(--background-image);
+    transition: background-image 0.8s;
+  }
+
+  /* custom scrollBar */
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background-color: var(--theme-color);
+  }
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  /* custom selection */
+  ::selection {
+    color: var(--theme-color);
+    background-color: var(--background-color);
+  }
+
+  /* page fade animation */
+  .fade {
+    @apply w-full self-start;
+    animation: fade 0.8s ease-out;
+  }
+  @keyframes fade {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .fade-in-appear,
+  .fade-in-enter {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+  .fade-in-appear-active,
+  .fade-in-enter-active {
+    opacity: 1;
+    transform: translateY(0);
+    transition: all 0.6s ease-in-out;
+  }
+  .fade-in-exit {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .fade-in-exit-active {
+    opacity: 0;
+    transform: translateY(-3rem);
+    transition: all 0.6s ease-in-out;
   }
 }
