--- a/components/Side/index.css
+++ b/components/Side/index.css
@@ -2,6 +2,10 @@
   @apply relative transform cursor-pointer p-2 duration-300;
 }
 
+.nav svg {
+  @apply w-5;
+}
+
 .nav-y > a {
   @apply hover:translate-x-1;
 }
