--- a/components/Panel/index.css
+++ b/components/Panel/index.css
@@ -1,5 +1,5 @@
 .panel {
-  @apply fixed inset-0 z-20;
+  @apply fixed inset-0;
 }
 
 .panel .mask,
@@ -118,7 +118,7 @@
   height: 3.125rem;
   line-height: 3.125rem;
   background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.06) 0 0 1.25rem;
+  box-shadow: rgba(0, 0, 0, 0.04) 0 0 1.25rem;
   transform: translate(-50%, 50%);
   transition: all 0.5s cubic-bezier(0.86, -0.02, 0.08, 1.02) 0s;
 }
