--- a/components/Spinner/index.css
+++ b/components/Spinner/index.css
@@ -1,4 +1,9 @@
-/* .spinner {
+.spinner-wrap {
+  @apply absolute left-1/2 top-1/2 flex items-center justify-center;
+  transform: translate(-50%, -50%);
+}
+
+.spinner {
   @apply relative overflow-hidden;
   width: 20rem;
   height: 2.5rem;
@@ -7,7 +12,7 @@
 .prospect {
   @apply absolute left-0;
   top: 6.25rem;
-  filter: drop-shadow(0 -100px 0 transparent);
+  filter: drop-shadow(0 -6.25rem 0 transparent);
 }
 
 .background {
@@ -17,47 +22,9 @@
 }
 
 .background img {
-  width: 20rem;
-  height: 2.5rem;
-}
-
-@keyframes loading {
-  0% {
-    width: 0;
-  }
-  100% {
-    width: 100%;
-  }
-} */
-
-.spinner {
-  position: relative;
-  width: 320px;
-  height: 40px;
-  overflow: hidden;
-}
-
-.prospect {
-  position: absolute;
-  top: 100px;
-  left: 0;
-  filter: drop-shadow(0 -100px 0 transparent);
-}
-
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  will-change: width;
-  overflow: hidden;
-  animation: loading 4s cubic-bezier(0.28, 0.11, 0.32, 1) infinite forwards;
-}
-
-.background img {
-  min-width: 320px;
-  min-height: 40px;
+  @apply m-0 shadow-none;
+  min-width: 20rem;
+  min-height: 2.5rem;
 }
 
 @keyframes loading {
