--- a/public/assets/styles/keqing.css
+++ b/public/assets/styles/keqing.css
@@ -62,7 +62,7 @@ main {
   --color-btn-primary-disabled-border: rgb(31 35 40 / 15%);
   --color-action-list-item-default-hover-bg: rgb(208 215 222 / 32%);
   --color-segmented-control-bg: rgb(0 0 0 / 4%);
-  --color-segmented-control-button-bg: #bfbccf;
+  --color-segmented-control-button-bg: #e6e3f6;
   --color-segmented-control-button-selected-border: #d0d7de;
   --color-fg-default: #374151;
   --color-fg-muted: #656d76;
@@ -104,5 +104,5 @@ main .gsc-loading-image {
 
 main .gsc-pagination-button,
 main .gsc-reactions-popover {
-  background-color: #bfbccf;
+  background-color: #e6e3f6;
 }
