--- a/public/assets/styles/yoimiya.css
+++ b/public/assets/styles/yoimiya.css
@@ -53,9 +53,9 @@ main {
   --color-btn-primary-border: rgb(31 35 40 / 15%);
   --color-btn-primary-shadow: 0 1px 0 rgb(31 35 40 / 10%);
   --color-btn-primary-inset-shadow: inset 0 1px 0 rgb(255 255 255 / 3%);
-  --color-btn-primary-hover-bg: #1a7f37;
+  --color-btn-primary-hover-bg: #c15c42;
   --color-btn-primary-hover-border: rgb(31 35 40 / 15%);
-  --color-btn-primary-selected-bg: hsl(137deg 66% 28% / 100%);
+  --color-btn-primary-selected-bg: #c15c42;
   --color-btn-primary-selected-shadow: inset 0 1px 0 rgb(0 45 17 / 20%);
   --color-btn-primary-disabled-text: rgb(255 255 255 / 80%);
   --color-btn-primary-disabled-bg: #c15c42;
@@ -78,7 +78,7 @@ main {
   --color-accent-emphasis: #c15c42;
   --color-accent-muted: #d0d7de;
   --color-accent-subtle: transparent;
-  --color-success-fg: #1a7f37;
+  --color-success-fg: #c15c42;
   --color-attention-fg: #9a6700;
   --color-attention-muted: rgb(212 167 44 / 40%);
   --color-attention-subtle: #fff8c5;
