--- a/public/assets/styles/ganyu.css
+++ b/public/assets/styles/ganyu.css
@@ -7,7 +7,6 @@
 
 main {
   font-family: 'Noto Serif SC', sans-serif;
-  margin-top: 4rem;
   --color-prettylights-syntax-comment: #6e7781;
   --color-prettylights-syntax-constant: #0550ae;
   --color-prettylights-syntax-entity: #8250df;
@@ -105,4 +104,9 @@ main .gsc-loading-image {
 main .gsc-pagination-button,
 main .gsc-reactions-popover {
   background-color: #e2e5f5;
+}
+
+/* FIX: last child border bottom not visible */
+main .gsc-comment:last-child {
+  transform: translateY(-1px);
 }
