--- a/public/assets/styles/ganyu.css
+++ b/public/assets/styles/ganyu.css
@@ -1,17 +1,17 @@
 @import url('https://www.chanshiyu.com/assets/styles/comment.css');
 
 main {
-  --color-btn-primary-bg: #5260a6;
-  --color-btn-primary-hover-bg: #5260a6;
-  --color-btn-primary-selected-bg: #5260a6;
-  --color-btn-primary-disabled-bg: #5260a6;
-  --color-segmented-control-button-bg: #e2e5f5;
-  --color-accent-fg: #5260a6;
-  --color-accent-emphasis: #5260a6;
-  --color-success-fg: #5260a6;
+  --color-btn-primary-bg: var(--ganyu-primary);
+  --color-btn-primary-hover-bg: var(--ganyu-primary);
+  --color-btn-primary-selected-bg: var(--ganyu-primary);
+  --color-btn-primary-disabled-bg: var(--ganyu-primary);
+  --color-segmented-control-button-bg: var(--ganyu-background);
+  --color-accent-fg: var(--ganyu-primary);
+  --color-accent-emphasis: var(--ganyu-primary);
+  --color-success-fg: var(--ganyu-primary);
 }
 
 main .gsc-pagination-button,
 main .gsc-reactions-popover {
-  background-color: #e2e5f5;
+  background-color: var(--ganyu-background);
 }
