--- a/public/assets/styles/hutao.css
+++ b/public/assets/styles/hutao.css
@@ -1,17 +1,17 @@
 @import url('https://www.chanshiyu.com/assets/styles/comment.css');
 
 main {
-  --color-btn-primary-bg: #e06458;
-  --color-btn-primary-hover-bg: #e06458;
-  --color-btn-primary-selected-bg: #e06458;
-  --color-btn-primary-disabled-bg: #e06458;
-  --color-segmented-control-button-bg: #fcfaf2;
-  --color-accent-fg: #e06458;
-  --color-accent-emphasis: #e06458;
-  --color-success-fg: #e06458;
+  --color-btn-primary-bg: var(--hutao-primary);
+  --color-btn-primary-hover-bg: var(--hutao-primary);
+  --color-btn-primary-selected-bg: var(--hutao-primary);
+  --color-btn-primary-disabled-bg: var(--hutao-primary);
+  --color-segmented-control-button-bg: var(--hutao-background);
+  --color-accent-fg: var(--hutao-primary);
+  --color-accent-emphasis: var(--hutao-primary);
+  --color-success-fg: var(--hutao-primary);
 }
 
 main .gsc-pagination-button,
 main .gsc-reactions-popover {
-  background-color: #fcfaf2;
+  background-color: var(--hutao-background);
 }
