--- a/public/assets/styles/kokomi.css
+++ b/public/assets/styles/kokomi.css
@@ -1,17 +1,17 @@
 @import url('https://www.chanshiyu.com/assets/styles/comment.css');
 
 main {
-  --color-btn-primary-bg: #bf9997;
-  --color-btn-primary-hover-bg: #bf9997;
-  --color-btn-primary-selected-bg: #bf9997;
-  --color-btn-primary-disabled-bg: #bf9997;
-  --color-segmented-control-button-bg: #f2dfd9;
-  --color-accent-fg: #bf9997;
-  --color-accent-emphasis: #bf9997;
-  --color-success-fg: #bf9997;
+  --color-btn-primary-bg: var(--kokomi-primary);
+  --color-btn-primary-hover-bg: var(--kokomi-primary);
+  --color-btn-primary-selected-bg: var(--kokomi-primary);
+  --color-btn-primary-disabled-bg: var(--kokomi-primary);
+  --color-segmented-control-button-bg: var(--kokomi-background);
+  --color-accent-fg: var(--kokomi-primary);
+  --color-accent-emphasis: var(--kokomi-primary);
+  --color-success-fg: var(--kokomi-primary);
 }
 
 main .gsc-pagination-button,
 main .gsc-reactions-popover {
-  background-color: #f2dfd9;
+  background-color: var(--kokomi-background);
 }
