--- a/styles/tailwindcss.css
+++ b/styles/tailwindcss.css
@@ -4,7 +4,6 @@
 
 @layer base {
   :root {
-    --font-color: #374151;
     scrollbar-gutter: stable both-edges;
     overflow-y: overlay;
   }
@@ -12,6 +11,6 @@
   body {
     @apply container mx-auto my-6;
     color: var(--font-color);
-    background: url('../assets/images/texture.svg') repeat;
+    background: url('../assets/images/texture.svg') repeat fixed;
   }
 }
