--- a/styles/tailwindcss.css
+++ b/styles/tailwindcss.css
@@ -9,8 +9,6 @@
   }
 
   body {
-    @apply container mx-auto my-6;
-    color: var(--font-color);
-    background: url('../assets/images/texture.svg') repeat fixed;
+    @apply container mx-auto p-3 md:my-6 md:p-0;
   }
 }
