--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1,7 +1,89 @@
-.highlighter span::before {
+/* .highlighter span::before {
   @apply absolute -left-0.5 bottom-0 z-0 h-3/5 content-[''];
   background-color: rgba(63, 98, 18, 0.25);
   width: calc(100% + 4px);
   transform: rotate(-2deg);
   border-radius: 20%30%;
+} */
+
+@layer components {
+  .link {
+    --shadow: #a1a1aa;
+    &:hover {
+      text-shadow:
+        6px 6px var(--shadow),
+        5.75px 5.75px var(--shadow),
+        5.5px 5.5px var(--shadow),
+        5.25px 5.25px var(--shadow),
+        5px 5px var(--shadow),
+        4.75px 4.75px var(--shadow),
+        4.5px 4.5px var(--shadow),
+        4.25px 4.25px var(--shadow),
+        4px 4px var(--shadow),
+        3.75px 3.75px var(--shadow),
+        3.5px 3.5px var(--shadow),
+        3.25px 3.25px var(--shadow),
+        3px 3px var(--shadow),
+        2.75px 2.75px var(--shadow),
+        2.5px 2.5px var(--shadow),
+        2.25px 2.25px var(--shadow),
+        2px 2px var(--shadow),
+        1.75px 1.75px var(--shadow),
+        1.5px 1.5px var(--shadow),
+        1.25px 1.25px var(--shadow),
+        1px 1px var(--shadow),
+        0.75px 0.75px var(--shadow),
+        0.5px 0.5px var(--shadow),
+        0.25px 0.25px var(--shadow);
+    }
+    /* position: relative;
+    text-decoration: none;
+    transition: color 0.5s ease-in-out;
+
+    &::before {
+      background: #27272a;
+      content: '';
+      inset: 0 -10px;
+      position: absolute;
+      transform: scaleX(0);
+      transform-origin: right;
+      transition: transform 0.5s ease-in-out;
+      z-index: -1;
+    }
+
+    &:hover {
+      color: #fff;
+    }
+
+    &:hover::before {
+      transform: scaleX(1);
+      transform-origin: left;
+    } */
+
+    /* box-shadow: inset 0 0 0 0 #27272a;
+    padding: 0 0.25rem;
+    margin: 0 -0.25rem;
+    transition:
+      color 0.5s ease-in-out,
+      box-shadow 0.5s ease-in-out;
+
+    &:hover {
+      color: #fff;
+      box-shadow: inset 800px 0 0 0 #27272a;
+    } */
+
+    /* @apply relative;
+
+    &::before {
+      @apply absolute -left-2 bottom-0  block h-full w-full bg-zinc-400 content-[''];
+      z-index: -1;
+      transform: scaleX(0);
+      transform-origin: top left;
+      transition: transform 0.3s ease;
+    }
+
+    &:hover::before {
+      transform: scaleX(1.1);
+    } */
+  }
 }
