--- a/styles/custom.css
+++ b/styles/custom.css
@@ -4,23 +4,23 @@
 
     &::before,
     &::after {
-      @apply absolute top-0 h-full bg-zinc-800;
+      @apply absolute left-0 top-0 h-full bg-zinc-800;
     }
 
     &::before {
-      @apply left-0 w-3;
+      @apply w-3;
       content: '';
     }
 
     &::after {
-      @apply left-3 w-0 overflow-hidden whitespace-nowrap text-zinc-100;
+      @apply w-0 overflow-hidden whitespace-nowrap pl-3 text-zinc-100;
       content: attr(data-content);
       transition: width 0.6s ease;
       line-height: normal;
     }
 
     &:hover:after {
-      width: calc(100% - 12px);
+      width: 100%;
     }
   }
 }
