--- a/styles/tailwindcss.css
+++ b/styles/tailwindcss.css
@@ -9,6 +9,6 @@
   }
 
   body {
-    @apply container mx-auto p-3 md:my-6 md:p-0;
+    @apply container mx-auto overflow-x-hidden p-3 md:my-6 md:p-0;
   }
 }
