--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1,6 +1,6 @@
 @layer base {
   body {
-    @apply bg-zinc-50 bg-light bg-fixed bg-repeat text-zinc-700 dark:bg-zinc-900 dark:bg-dark dark:text-zinc-300;
+    @apply bg-white bg-light bg-fixed bg-repeat text-zinc-700 dark:bg-zinc-900 dark:bg-dark dark:text-zinc-300;
   }
 }
 
