--- a/styles/components.css
+++ b/styles/components.css
@@ -1,6 +1,15 @@
+@tailwind components;
+
 @layer components {
-  kbd {
-    @apply rounded-lg border border-zinc-200 bg-zinc-100 p-1 leading-none text-zinc-500;
+  /* card */
+  .card {
+    @apply border border-zinc-200/50 bg-zinc-50/80 dark:border-zinc-800/50 dark:bg-zinc-950/80;
+  }
+
+  /* menu item */
+  .menuitem {
+    @apply transition-all duration-300;
+    @apply leading-none text-zinc-500 data-[isactive='true']:text-zinc-700 hover:bg-zinc-200/50 data-[isactive='true']:dark:text-zinc-300 hover:dark:bg-zinc-800/50;
   }
 
   /* rehype-pretty-code */
