--- a/styles/base.css
+++ b/styles/base.css
@@ -11,7 +11,7 @@
 
   body {
     @apply container mx-auto min-h-screen;
-    @apply bg-zinc-50 bg-light bg-fixed bg-repeat text-zinc-700 dark:bg-zinc-950 dark:bg-dark dark:text-zinc-300;
+    @apply bg-zinc-50 bg-fixed bg-repeat text-zinc-700 dark:bg-zinc-950 dark:text-zinc-300;
     @apply selection:bg-zinc-950 selection:text-zinc-300 dark:selection:bg-zinc-50 dark:selection:text-zinc-700;
   }
 
